--- a/front/src/components/HomePage/HomePage.css
+++ b/front/src/components/HomePage/HomePage.css
@@ -28,3 +28,12 @@
 body {
   background-color:#5499C7;
 }
+@media screen and (max-width: 1200px) {
+  .redirectionButton1 {
+    font-size: 1.5rem;
+
+  }
+  .redirectionButton2 {
+    font-size: 1.5rem;
+  }
+  }
