--- a/front/src/components/RegisterForm/registerform.css
+++ b/front/src/components/RegisterForm/registerform.css
@@ -1,26 +1,73 @@
 .FormFamily {
-    width: 400px;
-    margin: 0 auto;
-    text-align: left;
-}
-
-.FormFamily h1 {
-    text-align: center;
-}
-
-.FormFamily .form-data {
     display: flex;
-    justify-content: center;
-    margin: 5px 0;
+    flex-direction: column;
+    justify-self: left;
 }
 
-.FormFamily .form-data label {
-    display: inline-block;
-    width: 75px;
-    margin-right: 10px;
-    text-align: right;
+.h1Family {
+    padding-top: 1%;
+    padding-bottom: 1%;
 }
 
-.FormFamily .form-data input:not([type="submit"]) {
-    flex-grow: 1;
+.inputFamily {
+    outline:none;
+    background-color:whitesmoke;
+    color: black;
+    border-radius: 10px;
+    font-size: 1rem;
+    border: solid 2px transparent;
+    width: 30%;
+    height: 35px;
 }
+
+.paragraphFamily{
+    text-align: left;
+    padding-left: 35%;
+    padding-bottom: 5px;
+    padding-top: 10px;
+}
+
+.divButton {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 2%;
+
+}
+
+.familyButton {
+    background-color: white;
+    color:#5499C7;
+    width: 20%;
+    height: 40px;
+    border-radius: 10px;
+    font-size: 1rem;
+    border: solid 1px;
+  }
+
+  @media screen and (max-width: 1200px){
+    .inputFamily {
+        outline:none;
+        background-color:whitesmoke;
+        color: black;
+        border-radius: 10px;
+        font-size: 1rem;
+        border-color: white;
+        border: solid 2px transparent;
+        width: 70%;
+        height: 35px;
+    }
+
+    .paragraphFamily{
+        text-align: left;
+        padding-left: 15%;
+        padding-bottom: 5px;
+        padding-top: 10px;
+    }
+
+    .h1Family {
+        font-size: 25px;
+        padding-top: 2%;
+        padding-bottom: 2%;
+    }
+  }
