--- a/front/src/components/Footer/Footer.css
+++ b/front/src/components/Footer/Footer.css
@@ -8,7 +8,7 @@
     align-items: flex-start;
     padding-top: 160px;
     width: 7em;
-    margin-left: 20px;
+    margin-left: 35px;
 }
 
 .logorappel , .logocontact {
@@ -22,4 +22,10 @@
 
 .logohome {
     margin-top: -3px;
+    width: 100%;
+}
+
+.logo {
+    display: inline-block;
+    min-width: 35%;
 }
