--- a/front/src/components/Events/Event.css
+++ b/front/src/components/Events/Event.css
@@ -1,4 +1,4 @@
-.Bodyevent {
+/* .Bodyevent {
   background-color: #FFFFFF;
   height:100vh;
 }
@@ -82,4 +82,4 @@ input{
 
 .title_newEvent{
   align-self: center;
-}
+} */
