--- a/front/src/styles/common.css
+++ b/front/src/styles/common.css
@@ -1,3 +1,62 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
+:root {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  color: #27272a;
+}
+
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+
 .height\:viewport-100 {
   height: 100vh;
+}
+
+.overflow\:auto {
+  overflow: auto;
+}
+
+.text\:center {
+  text-align: center;
+}
+
+.navLink {
+  color : var(--secondary-color);
+  text-decoration:none;
+}
+
+.navLink.active {
+  background-color : var(--secondary-color);
+  color: var(--primary-text-color)
+}
+
+.border\:1 {
+  border: 1px solid var(--primary-color);
+}
+
+.border-top\:1 {
+  border-top: 1px solid rgba(1, 85, 166, .5);
+}
+
+button {
+  background-color: white;
+  border: 1px solid var(--primary-color);
+  border-radius: 10px;
+  color: var(--primary-color);
+}
+
+label {
+  font-weight: bold;
+}
+
+.title {
+  display: block;
+  font-size: 20px;
+  margin-block-start: 0.67em;
+  margin-block-end: 0.67em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: normal;
 }
