add style for demonstration

--- a/front/src/components/Events/Event.css
+++ b/front/src/components/Events/Event.css
@@ -1,11 +1,11 @@
 
 .parent1 {
-  background-color: #FDEDEC !important;
+  background-color: rgb(250, 190, 186) !important;
   color : black;
 }
 
 .parent2 {
-  background-color:#EAF2F8 ! important;
+  background-color:rgb(83, 127, 192) ! important;
   color : black
 }
 
